--- a/film.html
+++ b/film.html
@@ -5,16 +5,16 @@
     <title>Kani Kanea Creatives</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
-      content="About Kani Kanea Creatives, Creative Agency in Accra, Video Production, Digital Marketing, Content Creation, Branding"
+      content="Kani Kanea Films, Creative Video Production, Cinematic Storytelling, Film Production in Accra, Ghana, Branded Content, Documentaries, Commercials"
       name="keywords"
     />
     <meta
-      content="Learn more about Kani Kanea Creatives, a premier creative agency based in Accra, Ghana. Discover our story, values, and expertise in video production, digital marketing, content creation, and branding services."
+      content="Explore the world of Kani Kanea Films, where creativity meets cinematic storytelling. Based in Accra, Ghana, we specialize in film production, branded content, documentaries, commercials, and visual storytelling that captivates and inspires."
       name="description"
     />
 
     <!-- Favicon -->
-    <link href="images/kani-logo.png" rel="icon" />
+    <link href="images/Kani-kanea-logo.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -43,6 +43,34 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+
+    <!-- structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Kani Kanea Creatives",
+        "description": "Kani Kanea Creatives is a leading creative agency in Accra, Ghana, specializing in video production, content creation, branding, and digital marketing.",
+        "url": "https://www.kanikaneacreatives.com",
+        "logo": "https://www.kanikaneacreatives.com/images/Kani-kanea-logo.png",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Accra",
+          "addressCountry": "GH"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+233502009118",
+          "contactType": "Customer Service"
+        },
+        "sameAs": [
+          "https://www.facebook.com/kanikaneacreatives",
+          "https://x.com/Kanikanea",
+          "https://instagram.com/kanikaneacreatives",
+          "https://www.youtube.com/@KaniKaneaCreatives"
+        ]
+      }
+    </script>
   </head>
 
   <body>
@@ -80,24 +108,24 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
-            <a href="about.html" class="nav-item nav-link active">About</a>
-            <a href="team.html" class="nav-item nav-link">Team</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="film.html" class="nav-item nav-link active">Films</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
             <!-- <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                <a href="team.html" class="dropdown-item">Our Barber</a>
-                <a href="open.html" class="dropdown-item">Working Hours</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404 Page</a>
-              </div>
-            </div> -->
+                <a
+                  href="#"
+                  class="nav-link dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  >Pages</a
+                >
+                <div class="dropdown-menu m-0">
+                  <a href="price.html" class="dropdown-item">Pricing Plan</a>
+                  <a href="team.html" class="dropdown-item">Our Barber</a>
+                  <a href="open.html" class="dropdown-item">Working Hours</a>
+                  <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                  <a href="404.html" class="dropdown-item">404 Page</a>
+                </div>
+              </div> -->
           </div>
           <a
             href="project.html"
@@ -118,7 +146,7 @@
         <h1
           class="display-3 text-white text-uppercase mb-3 animated slideInDown"
         >
-          About
+          Films
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center text-uppercase mb-0">
@@ -126,7 +154,7 @@
               <a class="text-white" href="#">Home</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              About
+              Films
             </li>
           </ol>
         </nav>
@@ -134,94 +162,69 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
+    <!-- Projects Start -->
     <section class="container-xxl py-5">
       <div class="container">
-        <div class="row g-5">
-          <!-- Right Column: Text Content -->
-          <div class="wow fadeIn" data-wow-delay="0.5s">
-            <p class="d-inline-block bg-secondary text-primary py-1 px-4">
-              About Us
-            </p>
-            <h1 class="text-uppercase mb-4">
-              Illuminating Brands, Crafting Legacies
-            </h1>
-            <p>
-              At Kani Kanea Creatives, we embody the essence of our name—"First
-              Light" in Hawaiian—symbolizing the dawn of creativity and
-              innovation. As a premier creative agency, we are the vanguard of
-              transformative brand experiences, seamlessly fusing strategic
-              insight with artistic vision.
-            </p>
-            <p>
-              Our collective of seasoned professionals—storytellers,
-              strategists, and innovators—is dedicated to illuminating your
-              brand's unique narrative. We specialize in crafting multifaceted
-              campaigns that resonate deeply with target audiences, from
-              compelling video productions to data-driven digital initiatives.
-            </p>
-            <p class="mb-4">
-              With a finger on the pulse of emerging trends and consumer
-              behavior, we forge authentic connections between brands and their
-              audiences across all platforms. Our comprehensive expertise
-              encompasses:
-            </p>
-            <ul>
-              <li>Content Creation</li>
-              <li>Brand Strategy</li>
-              <li>Advertising</li>
-              <li>Talent Management</li>
-            </ul>
-            <p>
-              Whether you're unveiling a groundbreaking product, revitalizing
-              your brand identity, or expanding your digital footprint, Kani
-              Kanea Creatives is your partner in crafting impactful, enduring
-              brand stories. We don't just meet industry standards—we set them,
-              ensuring your brand shines brightly in the competitive
-              marketplace.
-            </p>
-            <div class="row g-4">
-              <!-- Highlight 1 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Our Mission</h3>
-                <p class="mb-0">
-                  To empower brands and creators by crafting stories and
-                  solutions that inspire, engage, and drive growth.
-                </p>
+        <div
+          class="text-center mx-auto mb-5 wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 600px"
+        >
+          <p class="d-inline-block bg-secondary text-primary py-1 px-4">
+            Our Films
+          </p>
+          <h1 class="text-uppercase">Explore Our Films</h1>
+        </div>
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img
+                  class="img-fluid"
+                  src="images/project1.jpg"
+                  alt="Project 1"
+                />
               </div>
-
-              <!-- Highlight 2 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Our Vision</h3>
-                <p class="mb-0">
-                  To be a global leader in creative storytelling and innovative
-                  brand solutions, shaping the future of marketing and design.
-                </p>
+              <div class="bg-secondary text-center p-4">
+                <h5 class="text-uppercase">Film 1</h5>
+                <span class="text-primary">Category</span>
               </div>
-
-              <!-- Highlight 3 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">A Proven Track Record</h3>
-                <p class="mb-0">
-                  Over 50+ successful projects spanning industries, showcasing
-                  our ability to adapt, innovate, and deliver results.
-                </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img
+                  class="img-fluid"
+                  src="images/project-2.jpg"
+                  alt="Project 2"
+                />
               </div>
-
-              <!-- Highlight 4 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Client-Centered Approach</h3>
-                <p class="mb-0">
-                  Every partnership is built on collaboration, transparency, and
-                  a commitment to achieving your unique goals.
-                </p>
+              <div class="bg-secondary text-center p-4">
+                <h5 class="text-uppercase">Film Title 2</h5>
+                <span class="text-primary">Category</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img
+                  class="img-fluid"
+                  src="images/project-3.jpg"
+                  alt="Project 3"
+                />
+              </div>
+              <div class="bg-secondary text-center p-4">
+                <h5 class="text-uppercase">Film Title 3</h5>
+                <span class="text-primary">Category</span>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- About End -->
+    <!-- Projects End -->
 
     <!-- Footer Start -->
     <footer
@@ -262,15 +265,11 @@
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
-            <h4 class="text-uppercase mb-4">
-              Illuminating Narratives: Your Vision, Our Craft
-            </h4>
+            <h4 class="text-uppercase mb-4">Our Story, Your Story</h4>
             <p>
-              At Kani Kanea Creatives, we weave stories that connect and
-              transform. Our name, meaning 'First Light,' symbolizes the dawn of
-              creativity and innovation. We craft compelling narratives that
-              inspire and engage, bringing your vision to life with professional
-              expertise."
+              "Stories are the threads that connect us all. At Kani Kanea
+              Creatives, we believe in crafting narratives that inspire, engage,
+              and transform."
             </p>
             <!-- Social Media Links -->
             <div class="d-flex pt-1 m-n1">
@@ -334,16 +333,6 @@
     <a href="#" class="btn btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
-
-    <!-- Start of HubSpot Embed Code -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js.hs-scripts.com/48832295.js"
-    ></script>
-    <!-- End of HubSpot Embed Code -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
