--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Favicon -->
-    <link href="images/Kani-kanea-logo.png" rel="icon" />
+    <link href="images/kani-logo.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -310,6 +310,16 @@
     <a href="#" class="btn btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
+
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js.hs-scripts.com/48832295.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
