--- a/project.html
+++ b/project.html
@@ -149,48 +149,46 @@
           <h1 class="text-uppercase">Explore Our Work</h1>
         </div>
         <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/project1.jpg"
-                  alt="Project 1"
-                />
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/sTNoSgdrg3E?si=MrRTTnnuUcJutcom"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
               </div>
               <div class="bg-secondary text-center p-4">
-                <h5 class="text-uppercase">Project Title 1</h5>
-                <span class="text-primary">Category</span>
+                <h5 class="text-uppercase">
+                  RECIPE: TASTY CHICKEN LIGHT SOUP MADE WITH DEEDEW ALL-PURPOSE
+                  SPICE
+                </h5>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/project-2.jpg"
-                  alt="Project 2"
-                />
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/qrfGPNBZTGM?si=nBAmhInsSsQVsiaX"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
               </div>
               <div class="bg-secondary text-center p-4">
-                <h5 class="text-uppercase">Project Title 2</h5>
-                <span class="text-primary">Category</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="team-item">
-              <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/project-3.jpg"
-                  alt="Project 3"
-                />
-              </div>
-              <div class="bg-secondary text-center p-4">
-                <h5 class="text-uppercase">Project Title 3</h5>
-                <span class="text-primary">Category</span>
+                <h5 class="text-uppercase">
+                  Nana Ama Mcbrown visits Madina Market with Deedew Spices
+                </h5>
               </div>
             </div>
           </div>
